fix: update env example for access token
